force-app/main/default/objects/Kanlet_License__c/Kanlet_License__c.object-meta.xml
<CustomObject>
    <label>Kanlet Configuration</label>
    <nameField>
        <displayFormat>KL-{0000}</displayFormat>
        <label>KL_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kanlet Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>