force-app/main/default/objects/Kanlet_License__c/fields/Contact_Limit__c.field-meta.xml
<CustomField>
    <fullName>Contact_Limit__c</fullName>
    <inlineHelpText>Set limit if records as 10k, 2k</inlineHelpText>
    <label>Contact Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>