force-app/main/default/objects/Kanlet_License__c/fields/Customer_id__c.field-meta.xml
<CustomField>
    <fullName>Customer_id__c</fullName>
    <inlineHelpText>Unique identifier for each customer.</inlineHelpText>
    <label>Customer id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>