force-app/main/default/objects/Kanlet_License__c/fields/Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Days_Left__c</fullName>
    <formula>Tracking_End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>