force-app/main/default/objects/Kanlet_License__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Duration mentions contract duration 1 year or 3 year</inlineHelpText>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>6 Years</fullName>
            </value>
            <value>
                <fullName>7 Years</fullName>
            </value>
            <value>
                <fullName>8 Years</fullName>
            </value>
            <value>
                <fullName>9 Years</fullName>
            </value>
            <value>
                <fullName>10 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>