force-app/main/default/objects/Kanlet_License__c/fields/ICP_Count__c.field-meta.xml
<CustomField>
    <fullName>ICP_Count__c</fullName>
    <label>ICP Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>