force-app/main/default/objects/Kanlet_License__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <inlineHelpText>The industry to which the customer or company belongs.</inlineHelpText>
    <label>Industry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>