force-app/main/default/objects/Kanlet_License__c/fields/Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Boolean indicating if the record is archived (possibly redundant, as it&apos;s listed twice).</inlineHelpText>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>