force-app/main/default/objects/Kanlet_License__c/fields/Is_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Updated?</label>
    <type>Checkbox</type>
</CustomField>