force-app/main/default/objects/Kanlet_License__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <inlineHelpText>The title of the job or position</inlineHelpText>
    <label>Job Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>