force-app/main/default/objects/Kanlet_License__c/fields/Job_Title_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Function__c</fullName>
    <inlineHelpText>Function or role of the job title.</inlineHelpText>
    <label>Job Title Function</label>
    <length>80</length>
    <type>Text</type>
</CustomField>