force-app/main/default/objects/Kanlet_License__c/fields/Last_Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Funding_Status__c</fullName>
    <inlineHelpText>The status of the most recent funding round</inlineHelpText>
    <label>Last Funding Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>