force-app/main/default/objects/Kanlet_License__c/fields/Location_City__c.field-meta.xml
<CustomField>
    <fullName>Location_City__c</fullName>
    <inlineHelpText>where the customer is located.</inlineHelpText>
    <label>Location City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>