force-app/main/default/objects/Kanlet_License__c/fields/Location_Country__c.field-meta.xml
<CustomField>
    <fullName>Location_Country__c</fullName>
    <inlineHelpText>Country where the customer is located.</inlineHelpText>
    <label>Location Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>