force-app/main/default/objects/Kanlet_License__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <inlineHelpText>The financial income or earnings of the company.</inlineHelpText>
    <label>Revenue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>