force-app/main/default/objects/Kanlet_License__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <inlineHelpText>Technologies or software used by the customer.</inlineHelpText>
    <label>Tech Stack</label>
    <length>80</length>
    <type>Text</type>
</CustomField>