force-app/main/default/objects/Kanlet_License__c/fields/Tracking_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Tracking_End_Date__c</fullName>
    <inlineHelpText>The date when the record was inserted or added</inlineHelpText>
    <label>Tracking End Date</label>
    <type>Date</type>
</CustomField>