force-app/main/default/objects/Kanlet_License__c/fields/Tracking_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Start_Date__c</fullName>
    <inlineHelpText>This is agreement start date</inlineHelpText>
    <label>Tracking Start Date</label>
    <type>Date</type>
</CustomField>