force-app/main/default/objects/Kanlet_License__c/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <inlineHelpText>Date when the record was last updated.</inlineHelpText>
    <label>Update Date</label>
    <type>Date</type>
</CustomField>