force-app/main/default/objects/Kanlet_License__c/fields/View_Track_Log__c.field-meta.xml
<CustomField>
    <fullName>View_Track_Log__c</fullName>
    <formula>HYPERLINK(
    LEFT($Api.Partner_Server_URL_360, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_360)) &amp; 
    &apos;/lightning/r/Track_Log__c/&apos; &amp; 
    Id &amp; 
    &apos;/view&apos;,
    &apos;View Track Log&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Track Log</label>
    <type>Text</type>
</CustomField>