force-app/main/default/objects/Kanlet_License__c/validationRules/Prevent_Edit_Config_After_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Config_After_Creation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Is_Updated__c = TRUE,
    ISCHANGED(Is_Updated__c),
    ($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot edit this record once it has been created.</errorMessage>
</ValidationRule>