force-app/main/default/objects/Kanlet_License__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_id__c</columns>
    <columns>Duration__c</columns>
    <columns>Tracking_Start_Date__c</columns>
    <columns>Frequency__c</columns>
    <columns>Contact_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>